# buffa

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  Taskfile.yml  rust-toolchain.toml
.changes/unreleased/: breaking-changes-20260627-002930.yaml  changed-20260629-003205.yaml  fixed-20260628-211100.yaml
.claude/agents/: rust-api-ergonomics-reviewer.md
.github/workflows/: ci.yml  cla.yaml  publish-crates.yml  release.yml
benchmarks/: Dockerfile.bench-buffa
benchmarks/buffa/: Cargo.toml  build.rs
benchmarks/buffa/benches/: analytics_event.rs  api_response.rs  google_message1.rs  media_frame.rs  mesh.rs  packed_tile.rs  protobuf.rs
benchmarks/buffa/src/: lib.rs
benchmarks/charts/: generate.py  tables.md
benchmarks/datasets/: mesh.pb
benchmarks/gen-datasets/src/: main.rs
benchmarks/history/: .gitignore  DESIGN.md  README.md  REPORT.md  annotations.md  build-cgu-variants.sh  generate.py  layout_envelope.py  parse_criterion.py  test_layout_envelope.py
benchmarks/history/runs/: v0.1.0.json  v0.2.0.json  v0.3.0.json  v0.4.0.json  v0.5.0.json  v0.6.0.json  v0.7.0.json  v0.7.1.json
benchmarks/proto/: bench_messages.proto
benchmarks/proto/iso/: mesh.proto
buffa/: Cargo.toml
buffa-build/: Cargo.toml
buffa-build/src/: lib.rs
buffa-codegen/: Cargo.toml
buffa-codegen/src/: comments.rs  context.rs  defaults.rs  enumeration.rs  extension.rs  features.rs  impl_message.rs  impl_text.rs  imports.rs  lazy_view.rs  lib.rs  message.rs  oneof.rs  owned_view.rs  view.rs
buffa-codegen/src/tests/: comments.rs  custom_attributes.rs  generation.rs  idiomatic_imports.rs  json_codegen.rs  mod.rs  naming.rs  owned_view_codegen.rs  pointer_repr.rs  proto2.rs  view_codegen.rs
buffa-codegen/tests/: codegen_integration.rs
buffa-descriptor/: Cargo.toml
buffa-descriptor/src/: desc.rs  features.rs  lib.rs  pool.rs
buffa-descriptor/src/reflect/: containers.rs  json.rs  message.rs  value.rs
buffa-smolstr/src/: lib.rs
buffa-test/: build.rs
buffa-test/protos/: basic.proto  edge_cases.proto  inline_field.proto  lazy_views.proto  lazy_views_lean.proto  prelude_shadow.proto  prelude_shadow_sibling.proto  view_json.proto  view_json_proto2.proto  with_setters.proto
buffa-test/src/: lib.rs
buffa-test/src/tests/: basic.rs  bytes_type.rs  closed_enum.rs  collision.rs  edge_cases.rs  extensions.rs  extensions_json.rs  inline_field.rs  json.rs  keyword.rs  lazy_views.rs  message_set.rs  mod.rs  nesting.rs  owned_view.rs  proto2.rs  proto3_semantics.rs  string_type.rs  textproto.rs  utf8_validation.rs  view.rs  view_json.rs  with_setters.rs  wkt.rs
buffa-test/tests/: reflect_bridge.rs  reflect_vtable.rs  reflectable.rs
buffa-types/src/: any_ext.rs  lib.rs  timestamp_chrono.rs  timestamp_ext.rs  value_ext.rs  view_serde_ext.rs  wrapper_ext.rs
buffa-types/tests/: wkt_roundtrip.rs
buffa/src/: encoding.rs  enumeration.rs  extension.rs  json_helpers.rs  lib.rs  map_codec.rs  message.rs  message_field.rs  message_set.rs  size_cache.rs  type_registry.rs  types.rs  unknown_fields.rs  view.rs
buffa/src/json_helpers/: tests.rs
buffa/src/text/: decoder.rs
conformance/: Cargo.toml  Dockerfile  build.rs  known_failures_lazy.txt  known_failures_view_json.txt  run-conformance.sh
conformance/src/: main.rs
docs/: guide.md  migration-from-prost.md  migration-from-protobuf.md
examples/addressbook/src/: main.rs
examples/envelope/src/: main.rs
examples/logging/: buf.gen.yaml
protoc-gen-buffa/: Cargo.toml  Dockerfile
protoc-gen-buffa-packaging/: Cargo.toml
protoc-gen-buffa-packaging/src/: main.rs
protoc-gen-buffa-packaging/tests/: cli.rs
protoc-gen-buffa/src/: main.rs
protoc-gen-buffa/tests/: cli.rs
stress/googleapis/: Dockerfile  gen_lib_rs.py
