[workspace]
resolver = "2"
members = [
    "buffa",
    "buffa-types",
    "buffa-descriptor",
    "buffa-codegen",
    "buffa-build",
    "buffa-smolstr",
    "buffa-test",
    "buffa-yaml",
    "protoc-gen-buffa",
    "protoc-gen-buffa-packaging",
]
exclude = [
    "benchmarks/gen-datasets",
    "benchmarks/buffa",
    "benchmarks/prost",
    "benchmarks/prost-bytes",
    "benchmarks/google",
    "benchmarks/go",
    "examples/addressbook",
    "examples/bsr-quickstart",
    "examples/conflicts",
    "examples/envelope",
    "examples/logging",
]

[workspace.package]
version = "0.7.1"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/anthropics/buffa"
keywords = ["protobuf", "protocol-buffers", "serialization", "no-std", "editions"]
categories = ["encoding", "no-std"]

# Applies to release builds within this workspace (CI-built release binaries,
# benchmarks, conformance). Library consumers do not inherit this — Cargo only
# honors [profile.*] from the top-level workspace, so a project depending on
# buffa/buffa-build must set its own [profile.release] to get LTO.
[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
buffa = { path = "buffa", version = "0.7.1", default-features = false }
buffa-types = { path = "buffa-types", version = "0.7.1" }
# `default-features = false` keeps the codegen toolchain (`buffa-codegen` /
# `buffa-build` / `protoc-gen-buffa`) lean — descriptor types are read at
# codegen time via the binary codec only, never serialised to JSON / text or
# borrowed as views, so the codegen build graph carries no `serde` /
# `serde_json` / `base64`. Downstream consumers whose protos reference
# `descriptor.proto` types as fields enable the features they need.
buffa-descriptor = { path = "buffa-descriptor", version = "0.7.1", default-features = false }
buffa-codegen = { path = "buffa-codegen", version = "0.7.1" }
buffa-build = { path = "buffa-build", version = "0.7.1" }
buffa-smolstr = { path = "buffa-smolstr", version = "0.7.1" }
buffa-test = { path = "buffa-test", version = "0.7.1" }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
bytes = { version = "1", default-features = false }
# Minimum 0.4.34: the `chrono::TimeDelta` name (used throughout
# duration_chrono.rs) was introduced in 0.4.34 as the rename of
# `chrono::Duration`; `TimeDelta::try_seconds` arrived in 0.4.32 and
# `DateTime::<Utc>::from_timestamp` in 0.4.31. Verified mechanically:
# 0.4.31 fails to compile this crate's `chrono` feature, 0.4.34 succeeds.
chrono = { version = "0.4.34", default-features = false }
foldhash = { version = "0.1", default-features = false }
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }
once_cell = { version = "1", default-features = false }
rustversion = { version = "1" }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_norway = { version = "0.9" }
arbitrary = { version = "1", default-features = false, features = ["derive"] }
thiserror = { version = "2", default-features = false }
# Optional `string` field representations that will be selectable via
# `buffa_build`'s forthcoming `string_type` knob. Declared
# `default-features = false` so they stay `no_std`; the relevant
# `serde`/`arbitrary`/`std` sub-features are turned on by the matching `buffa`
# feature (see buffa/Cargo.toml).
#
# `smol_str` is capped below 0.3.4: that release raised its MSRV to 1.89, above
# buffa's 1.87. 0.3.2 (no declared MSRV) keeps the `serde`/`arbitrary` features
# we need. Relax the cap when buffa's MSRV reaches 1.89.
smol_str = { version = ">=0.3, <0.3.4", default-features = false }
ecow = { version = "0.2", default-features = false }
compact_str = { version = "0.9", default-features = false }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
