[package]
name = "buffa-codegen"
description = "Shared code generation logic for buffa (descriptor → Rust source)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["protobuf", "protocol-buffers", "codegen"]
categories = ["development-tools::build-utils"]

[dependencies]
# `path` wins for local workspace development; `version` is used on publish.
buffa = { path = "../buffa", version = "0.4.0" }
buffa-descriptor = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
