[package]
name = "protoc-gen-buffa-packaging"
description = "protoc plugin that emits a mod.rs module tree for buffa per-file output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["protobuf", "protocol-buffers", "protoc", "plugin", "codegen"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
buffa = { path = "../buffa", version = "0.4.0" }
buffa-codegen = { workspace = true }
