[package]
name = "bench-buffa"
version = "0.1.0"
edition = "2021"
publish = false
autobenches = false  # all bench targets are listed explicitly; keep benches/common.rs (shared include) from being auto-discovered

# Disable lib benchmarks so `cargo bench -- --save-baseline X` only hits
# the criterion binary (not the libtest harness which rejects criterion args).
[lib]
bench = false

[dependencies]
buffa = { path = "../../buffa", features = ["json"] }
buffa-descriptor = { path = "../../buffa-descriptor", features = ["reflect", "json", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
buffa-build = { path = "../../buffa-build" }

[dev-dependencies]
criterion = "0.5"

[features]
default = ["api_response", "log_record", "analytics_event", "google_message1", "media_frame", "packed_tile", "mesh", "reflect", "lazy"]
api_response = []
log_record = []
analytics_event = []
google_message1 = []
media_frame = []
packed_tile = []
mesh = []
reflect = []
lazy = []
# `iso` gates the per-message isolated targets out of the default `task bench` run.
iso = []

[[bench]]
name = "protobuf"
harness = false
required-features = ["api_response", "log_record", "analytics_event", "google_message1", "media_frame", "packed_tile", "mesh", "lazy"]

[[bench]]
name = "reflect"
harness = false
required-features = ["api_response", "log_record", "analytics_event", "google_message1", "media_frame", "packed_tile", "mesh", "reflect", "lazy"]

[[bench]]
name = "api_response"
harness = false
required-features = ["iso", "api_response"]

[[bench]]
name = "log_record"
harness = false
required-features = ["iso", "log_record"]

[[bench]]
name = "analytics_event"
harness = false
required-features = ["iso", "analytics_event"]

[[bench]]
name = "google_message1"
harness = false
required-features = ["iso", "google_message1"]

[[bench]]
name = "media_frame"
harness = false
required-features = ["iso", "media_frame"]

[[bench]]
name = "packed_tile"
harness = false
required-features = ["iso", "packed_tile"]

[[bench]]
name = "mesh"
harness = false
required-features = ["iso", "mesh"]

# Build at the release profile (lto, single codegen unit) for a fair cross-impl
# comparison — the same profile a consumer building in release gets, and the one
# the per-release benchmark history pins. These crates are excluded from the root
# workspace, so [profile.*] in a parent manifest is ignored; the empty [workspace]
# table makes each crate its own workspace root, which is what lets [profile.bench]
# take effect here. Without it cargo silently builds at cgu=16/lto=off.
[workspace]

[profile.bench]
lto = true
codegen-units = 1
